Revert "Added section three"
This reverts commit 9312bf97c7e4e448e3f1348fc95673ce2117ed0f, reversing
changes made to 4e37204eceeccf9edb76b33c87c6316d0de4ef36.

--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/kylepinkham/Unity Projects/Puzzleopolis/Builds/Alpha Build/LightingTest/Build/LightingTest;/Users/kylepinkham/Unity Projects/Puzzleopolis/Builds/Alpha Build/LightingTest;C:/Users/suthe/CS410/Group Project/Builds;C:/Users/suthe/CS410/Group Project/WebGL Builds;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/suthe/CS410/Group Project/Builds;C:/Users/suthe/CS410/Group Project/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
